testing/task1_isomorphism/generator/generated/FSAParser.py
# Generated from C:/Users/Захар/Desktop/tuke/bakalarska/fj_assignments/tasks/task1_isomorphism/generator/grammar/FSA.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FSAParser ( Parser ):

    grammarFileName = "FSA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'alphabet'", "'states'", "'initial_state'", 
                     "'accepting_states'", "'transitions'", "':'", "','", 
                     "'{'", "'}'", "'='", "'-'", "'->'" ]

    symbolicNames = [ "<INVALID>", "ALPHABET", "STATES", "START", "ACCEPTING", 
                      "TRANSITIONS", "COLON", "COMMA", "LBRACE", "RBRACE", 
                      "EQUAL", "DASH", "ARROW", "ID", "SYMBOL", "EPSILON", 
                      "STRING", "COMMENT", "WS" ]

    RULE_file = 0
    RULE_section = 1
    RULE_alphabet = 2
    RULE_states = 3
    RULE_stateEntry = 4
    RULE_start = 5
    RULE_accepting = 6
    RULE_transitions = 7
    RULE_transition = 8
    RULE_symbol = 9

    ruleNames =  [ "file", "section", "alphabet", "states", "stateEntry", 
                   "start", "accepting", "transitions", "transition", "symbol" ]

    EOF = Token.EOF
    ALPHABET=1
    STATES=2
    START=3
    ACCEPTING=4
    TRANSITIONS=5
    COLON=6
    COMMA=7
    LBRACE=8
    RBRACE=9
    EQUAL=10
    DASH=11
    ARROW=12
    ID=13
    SYMBOL=14
    EPSILON=15
    STRING=16
    COMMENT=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FSAParser.EOF, 0)

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FSAParser.SectionContext)
            else:
                return self.getTypedRuleContext(FSAParser.SectionContext,i)


        def getRuleIndex(self):
            return FSAParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile" ):
                return visitor.visitFile(self)
            else:
                return visitor.visitChildren(self)




    def file_(self):

        localctx = FSAParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.section()
                self.state = 23 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 62) != 0)):
                    break

            self.state = 25
            self.match(FSAParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alphabet(self):
            return self.getTypedRuleContext(FSAParser.AlphabetContext,0)


        def states(self):
            return self.getTypedRuleContext(FSAParser.StatesContext,0)


        def start(self):
            return self.getTypedRuleContext(FSAParser.StartContext,0)


        def accepting(self):
            return self.getTypedRuleContext(FSAParser.AcceptingContext,0)


        def transitions(self):
            return self.getTypedRuleContext(FSAParser.TransitionsContext,0)


        def getRuleIndex(self):
            return FSAParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection" ):
                return visitor.visitSection(self)
            else:
                return visitor.visitChildren(self)




    def section(self):

        localctx = FSAParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_section)
        try:
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 27
                self.alphabet()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.states()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 29
                self.start()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 30
                self.accepting()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 31
                self.transitions()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlphabetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALPHABET(self):
            return self.getToken(FSAParser.ALPHABET, 0)

        def COLON(self):
            return self.getToken(FSAParser.COLON, 0)

        def LBRACE(self):
            return self.getToken(FSAParser.LBRACE, 0)

        def symbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FSAParser.SymbolContext)
            else:
                return self.getTypedRuleContext(FSAParser.SymbolContext,i)


        def RBRACE(self):
            return self.getToken(FSAParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FSAParser.COMMA)
            else:
                return self.getToken(FSAParser.COMMA, i)

        def getRuleIndex(self):
            return FSAParser.RULE_alphabet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlphabet" ):
                listener.enterAlphabet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlphabet" ):
                listener.exitAlphabet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlphabet" ):
                return visitor.visitAlphabet(self)
            else:
                return visitor.visitChildren(self)




    def alphabet(self):

        localctx = FSAParser.AlphabetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_alphabet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(FSAParser.ALPHABET)
            self.state = 35
            self.match(FSAParser.COLON)
            self.state = 36
            self.match(FSAParser.LBRACE)
            self.state = 37
            self.symbol()
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.match(FSAParser.COMMA)
                    self.state = 39
                    self.symbol() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 45
                self.match(FSAParser.COMMA)


            self.state = 48
            self.match(FSAParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATES(self):
            return self.getToken(FSAParser.STATES, 0)

        def COLON(self):
            return self.getToken(FSAParser.COLON, 0)

        def LBRACE(self):
            return self.getToken(FSAParser.LBRACE, 0)

        def stateEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FSAParser.StateEntryContext)
            else:
                return self.getTypedRuleContext(FSAParser.StateEntryContext,i)


        def RBRACE(self):
            return self.getToken(FSAParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FSAParser.COMMA)
            else:
                return self.getToken(FSAParser.COMMA, i)

        def getRuleIndex(self):
            return FSAParser.RULE_states

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStates" ):
                listener.enterStates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStates" ):
                listener.exitStates(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStates" ):
                return visitor.visitStates(self)
            else:
                return visitor.visitChildren(self)




    def states(self):

        localctx = FSAParser.StatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_states)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(FSAParser.STATES)
            self.state = 51
            self.match(FSAParser.COLON)
            self.state = 52
            self.match(FSAParser.LBRACE)
            self.state = 53
            self.stateEntry()
            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 54
                    self.match(FSAParser.COMMA)
                    self.state = 55
                    self.stateEntry() 
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 61
                self.match(FSAParser.COMMA)


            self.state = 64
            self.match(FSAParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FSAParser.ID, 0)

        def EQUAL(self):
            return self.getToken(FSAParser.EQUAL, 0)

        def STRING(self):
            return self.getToken(FSAParser.STRING, 0)

        def getRuleIndex(self):
            return FSAParser.RULE_stateEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateEntry" ):
                listener.enterStateEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateEntry" ):
                listener.exitStateEntry(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateEntry" ):
                return visitor.visitStateEntry(self)
            else:
                return visitor.visitChildren(self)




    def stateEntry(self):

        localctx = FSAParser.StateEntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stateEntry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(FSAParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 67
                self.match(FSAParser.EQUAL)
                self.state = 68
                self.match(FSAParser.STRING)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(FSAParser.START, 0)

        def COLON(self):
            return self.getToken(FSAParser.COLON, 0)

        def ID(self):
            return self.getToken(FSAParser.ID, 0)

        def getRuleIndex(self):
            return FSAParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = FSAParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(FSAParser.START)
            self.state = 72
            self.match(FSAParser.COLON)
            self.state = 73
            self.match(FSAParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AcceptingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACCEPTING(self):
            return self.getToken(FSAParser.ACCEPTING, 0)

        def COLON(self):
            return self.getToken(FSAParser.COLON, 0)

        def LBRACE(self):
            return self.getToken(FSAParser.LBRACE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FSAParser.ID)
            else:
                return self.getToken(FSAParser.ID, i)

        def RBRACE(self):
            return self.getToken(FSAParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FSAParser.COMMA)
            else:
                return self.getToken(FSAParser.COMMA, i)

        def getRuleIndex(self):
            return FSAParser.RULE_accepting

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccepting" ):
                listener.enterAccepting(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccepting" ):
                listener.exitAccepting(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccepting" ):
                return visitor.visitAccepting(self)
            else:
                return visitor.visitChildren(self)




    def accepting(self):

        localctx = FSAParser.AcceptingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_accepting)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(FSAParser.ACCEPTING)
            self.state = 76
            self.match(FSAParser.COLON)
            self.state = 77
            self.match(FSAParser.LBRACE)
            self.state = 78
            self.match(FSAParser.ID)
            self.state = 83
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.match(FSAParser.COMMA)
                    self.state = 80
                    self.match(FSAParser.ID) 
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 86
                self.match(FSAParser.COMMA)


            self.state = 89
            self.match(FSAParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRANSITIONS(self):
            return self.getToken(FSAParser.TRANSITIONS, 0)

        def COLON(self):
            return self.getToken(FSAParser.COLON, 0)

        def LBRACE(self):
            return self.getToken(FSAParser.LBRACE, 0)

        def transition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FSAParser.TransitionContext)
            else:
                return self.getTypedRuleContext(FSAParser.TransitionContext,i)


        def RBRACE(self):
            return self.getToken(FSAParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FSAParser.COMMA)
            else:
                return self.getToken(FSAParser.COMMA, i)

        def getRuleIndex(self):
            return FSAParser.RULE_transitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransitions" ):
                listener.enterTransitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransitions" ):
                listener.exitTransitions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransitions" ):
                return visitor.visitTransitions(self)
            else:
                return visitor.visitChildren(self)




    def transitions(self):

        localctx = FSAParser.TransitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_transitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(FSAParser.TRANSITIONS)
            self.state = 92
            self.match(FSAParser.COLON)
            self.state = 93
            self.match(FSAParser.LBRACE)
            self.state = 94
            self.transition()
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 95
                    self.match(FSAParser.COMMA)
                    self.state = 96
                    self.transition() 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 102
                self.match(FSAParser.COMMA)


            self.state = 105
            self.match(FSAParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FSAParser.ID)
            else:
                return self.getToken(FSAParser.ID, i)

        def DASH(self):
            return self.getToken(FSAParser.DASH, 0)

        def symbol(self):
            return self.getTypedRuleContext(FSAParser.SymbolContext,0)


        def ARROW(self):
            return self.getToken(FSAParser.ARROW, 0)

        def getRuleIndex(self):
            return FSAParser.RULE_transition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTransition" ):
                listener.enterTransition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTransition" ):
                listener.exitTransition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransition" ):
                return visitor.visitTransition(self)
            else:
                return visitor.visitChildren(self)




    def transition(self):

        localctx = FSAParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_transition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(FSAParser.ID)
            self.state = 108
            self.match(FSAParser.DASH)
            self.state = 109
            self.symbol()
            self.state = 110
            self.match(FSAParser.ARROW)
            self.state = 111
            self.match(FSAParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SymbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(FSAParser.SYMBOL, 0)

        def ID(self):
            return self.getToken(FSAParser.ID, 0)

        def EPSILON(self):
            return self.getToken(FSAParser.EPSILON, 0)

        def getRuleIndex(self):
            return FSAParser.RULE_symbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbol" ):
                listener.enterSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbol" ):
                listener.exitSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbol" ):
                return visitor.visitSymbol(self)
            else:
                return visitor.visitChildren(self)




    def symbol(self):

        localctx = FSAParser.SymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_symbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





